// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builds annotated span on simple mark 1`] = `
Array [
  Object {
    "_key": "cZUQGmh4",
    "_type": "span",
    "children": Array [
      "sanity",
    ],
    "mark": "code",
    "markKey": "code",
  },
  " is the name of the CLI tool.",
]
`;

exports[`builds annotated spans with expanded marks on object-style marks 1`] = `
Array [
  "A word of warning; ",
  Object {
    "_key": "toaiCqIK",
    "_type": "span",
    "children": Array [
      "Sanity",
    ],
    "mark": Object {
      "_key": "someLinkId",
      "_type": "link",
      "href": "https://sanity.io/",
    },
    "markKey": "someLinkId",
  },
  " is addictive.",
]
`;

exports[`builds annotated, joined span on adjacent, equal marks 1`] = `
Array [
  Object {
    "_key": "cZUQGmh4",
    "_type": "span",
    "children": Array [
      "A word of",
      " warning;",
    ],
    "mark": "strong",
    "markKey": "strong",
  },
  " Sanity is addictive.",
]
`;

exports[`builds annotated, nested spans in tree format 1`] = `
Array [
  Object {
    "_key": "cZUQGmh4",
    "_type": "span",
    "children": Array [
      "A word of ",
      Object {
        "_key": "toaiCqIK",
        "_type": "span",
        "children": Array [
          "warning;",
        ],
        "mark": "em",
        "markKey": "em",
      },
    ],
    "mark": "strong",
    "markKey": "strong",
  },
  " Sanity is addictive.",
]
`;

exports[`builds correct structure from advanced, nested mark structure 1`] = `
Array [
  Object {
    "_key": "a1ph4",
    "_type": "span",
    "children": Array [
      "Sanity",
    ],
    "mark": Object {
      "_key": "zomgLink",
      "_type": "link",
      "href": "https://sanity.io/",
    },
    "markKey": "zomgLink",
  },
  " can be used to power almost any ",
  Object {
    "_key": "ch4r1i3",
    "_type": "span",
    "children": Array [
      Object {
        "_key": "ch4r1i3",
        "_type": "span",
        "children": Array [
          Object {
            "_key": "ch4r1i3",
            "_type": "span",
            "children": Array [
              "app",
            ],
            "mark": "strong",
            "markKey": "strong",
          },
          " or website",
        ],
        "mark": "em",
        "markKey": "em",
      },
    ],
    "mark": Object {
      "_key": "zomgLink",
      "_type": "link",
      "href": "https://sanity.io/",
    },
    "markKey": "zomgLink",
  },
  ".",
]
`;

exports[`builds empty tree on empty block 1`] = `Array []`;

exports[`builds simple multi-node tree on markless spans 1`] = `
Array [
  "Span number one. ",
  "And span number two.",
]
`;

exports[`builds simple one-node tree on single, markless span 1`] = `
Array [
  "Plain text.",
]
`;
